--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "@types/leaflet": "^1.9.8",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
+    "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
